--- a/packages/web/Cargo.toml
+++ b/packages/web/Cargo.toml
@@ -78,9 +78,13 @@ features = [
 lazy-js-bundle = { workspace = true }
 
 [features]
-default = ["panic_hook", "mounted", "hot_reload", "document"]
+default = ["panic_hook", "full"]
+full = [
+
+]
 # default = ["panic_hook", "mounted", "file_engine", "hot_reload", "document"]
 panic_hook = ["dep:console_error_panic_hook"]
+
 hydrate = ["web-sys/Comment", "ciborium", "dep:serde"]
 mounted = ["web-sys/Element", "dioxus-html/mounted"]
 file_engine = ["dioxus-html/file-engine"]
@@ -93,7 +97,6 @@ hot_reload = [
     "dioxus-core/serialize",
 ]
 document = [
-    "dioxus-html/document",
     "dep:serde-wasm-bindgen",
     "dep:serde_json",
     "dep:serde",
