--- a/packages/liveview/Cargo.toml
+++ b/packages/liveview/Cargo.toml
@@ -22,7 +22,7 @@ tokio-stream = { version = "0.1.11", features = ["net"] }
 tokio-util = { version = "0.7.4", features = ["rt"] }
 serde = { version = "1.0.151", features = ["derive"] }
 serde_json = "1.0.91"
-dioxus-html = { workspace = true, features = ["serialize", "document", "mounted"] }
+dioxus-html = { workspace = true, features = ["serialize", "mounted"] }
 rustc-hash = { workspace = true }
 
 dioxus-core = { workspace = true, features = ["serialize"] }
