--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -92,7 +92,7 @@ dioxus-rsx = { workspace = true, features = ["hot_reload"] }
 dioxus-html = { workspace = true, features = ["hot-reload-context"] }
 dioxus-core = { workspace = true, features = ["serialize"] }
 dioxus-core-types = { workspace = true }
-dioxus-hot-reload = { workspace = true, features = ["serve"] }
+# dioxus-hot-reload = { workspace = true, features = ["serve"] }
 ignore = "0.4.22"
 env_logger = { workspace = true }
 
