--- a/packages/static-generation/Cargo.toml
+++ b/packages/static-generation/Cargo.toml
@@ -13,11 +13,11 @@ resolver = "2"
 [dependencies]
 dioxus-fullstack = { workspace = true }
 dioxus-lib.workspace = true
-dioxus-router = { workspace = true, features = ["fullstack"]}
+dioxus-router = { workspace = true, features = ["fullstack"] }
 dioxus-ssr = { workspace = true, features = ["incremental"], optional = true }
 axum = { workspace = true, features = ["ws", "macros"], optional = true }
 tower-http = { workspace = true, features = ["fs"], optional = true }
-dioxus-hot-reload = { workspace = true, features = ["serve"], optional = true }
+dioxus-devtools = { workspace = true, optional = true }
 # dioxus-cli-config = { workspace = true, features = ["read-config"], optional = true }
 dioxus-web = { workspace = true, features = ["hydrate"], optional = true }
 tokio = { workspace = true, optional = true }
@@ -31,7 +31,17 @@ criterion = { workspace = true }
 
 [features]
 default = []
-server = ["dioxus-fullstack/server", "dioxus-router/ssr", "dep:dioxus-ssr", "dep:tokio", "dep:http", "dep:axum", "dep:tower-http", "dep:dioxus-hot-reload", "dep:tower"]
+server = [
+    "dioxus-fullstack/server",
+    "dioxus-router/ssr",
+    "dep:dioxus-ssr",
+    "dep:tokio",
+    "dep:http",
+    "dep:axum",
+    "dep:tower-http",
+    "dep:dioxus-devtools",
+    "dep:tower",
+]
 # server = ["dioxus-fullstack/server", "dioxus-router/ssr", "dep:dioxus-ssr", "dep:tokio", "dep:http", "dep:axum", "dep:tower-http", "dep:dioxus-hot-reload", "dep:dioxus-cli-config", "dep:tower"]
 web = ["dioxus-fullstack/web", "dioxus-router/web", "dep:dioxus-web"]
 
