--- a/packages/web/Cargo.toml
+++ b/packages/web/Cargo.toml
@@ -15,7 +15,7 @@ dioxus-core-types = { workspace = true }
 dioxus-core = { workspace = true }
 dioxus-html = { workspace = true }
 dioxus-document = { workspace = true }
-dioxus-hot-reload = { workspace = true, features = ["client"] }
+dioxus-devtools = { workspace = true }
 dioxus-signals = { workspace = true }
 dioxus-interpreter-js = { workspace = true, features = [
     "minimal_bindings",
