--- a/packages/desktop/Cargo.toml
+++ b/packages/desktop/Cargo.toml
@@ -73,8 +73,7 @@ default = ["tokio_runtime", "wry/objc-exception", "devtools"]
 tokio_runtime = ["dep:tokio"]
 fullscreen = ["wry/fullscreen"]
 transparent = ["wry/transparent"]
-devtools = ["wry/devtools"]
-dev = ["dep:dioxus-devtools"]
+devtools = ["wry/devtools", "dep:dioxus-devtools"]
 gnu = []
 
 [package.metadata.docs.rs]
