--- a/packages/devtools/Cargo.toml
+++ b/packages/devtools/Cargo.toml
@@ -11,10 +11,10 @@ keywords = ["dom", "ui", "gui", "react", "hot-reloading"]
 
 [dependencies]
 dioxus-rsx = { workspace = true }
+dioxus-html = { workspace = true }
+dioxus-signals = { workspace = true }
 dioxus-core = { workspace = true, features = ["serialize"] }
-dioxus-html = { workspace = true, optional = true }
-dioxus-signals = { workspace = true, optional = true }
-
+dioxus-devtools-types = { workspace = true }
 serde = { version = "1", features = ["derive"] }
 
 # hot reloading serve
@@ -24,11 +24,6 @@ warnings.workspace = true
 [dev-dependencies]
 tokio = { workspace = true, features = ["full"] }
 serde_json = "1.0.91"
-
-[features]
-default = []
-client = ["dep:dioxus-signals"]
-serve = []
 
 [package.metadata.docs.rs]
 cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
