--- a/packages/web/Cargo.toml
+++ b/packages/web/Cargo.toml
@@ -80,15 +80,18 @@ lazy-js-bundle = { workspace = true }
 [features]
 default = ["panic_hook", "full"]
 full = [
-
+    "devtools",
+    "mounted",
+    "file-engine",
+    "document"
 ]
 # default = ["panic_hook", "mounted", "file_engine", "hot_reload", "document"]
 panic_hook = ["dep:console_error_panic_hook"]
 
 hydrate = ["web-sys/Comment", "ciborium", "dep:serde"]
 mounted = ["web-sys/Element", "dioxus-html/mounted"]
-file_engine = ["dioxus-html/file-engine"]
-hot_reload = [
+file-engine = ["dioxus-html/file-engine"]
+devtools = [
     "web-sys/MessageEvent",
     "web-sys/WebSocket",
     "web-sys/Location",
