--- a/packages/fullstack/Cargo.toml
+++ b/packages/fullstack/Cargo.toml
@@ -44,7 +44,7 @@ once_cell = { workspace = true }
 tokio-util = { version = "0.7.8", features = ["rt"], optional = true }
 async-trait = { version = "0.1.58", optional = true }
 
-serde = "1.0.159"
+serde = { workspace = true }
 tokio-stream = { version = "0.1.12", features = ["sync"], optional = true }
 futures-util = { workspace = true }
 futures-channel = { workspace = true }
@@ -62,7 +62,7 @@ tower = { workspace = true, features = ["util"], optional = true }
 tower-layer = { version = "0.3.2", optional = true }
 parking_lot = { version = "0.12.1", features = ["send_guard"], optional = true }
 web-sys = { version = "0.3.61", optional = true, features = ["Window", "Document", "Element", "HtmlDocument", "Storage", "console"] }
-clap = { version = "4.5.7", optional = true, features = ["derive"] }
+clap = { workspace = true, optional = true, features = ["derive"] }
 aws-lc-rs = { version = "1.8.1", optional = true }
 dioxus-devtools = { workspace = true, optional = true }
 
