--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -103,7 +103,7 @@ ratatui = { version = "0.27.0", features = ["crossterm", "unstable"] }
 crossterm = { version = "0.27.0", features = ["event-stream"] }
 ansi-to-tui = "=5.0.0-rc.1"
 ansi-to-html = "0.2.1"
-
+manganis-core = { workspace = true }
 
 
 
