clean up cli, inline structs, cut down number of unique types where possible

--- a/packages/fullstack/Cargo.toml
+++ b/packages/fullstack/Cargo.toml
@@ -21,6 +21,7 @@ tower-http = { workspace = true, optional = true, features = ["fs"] }
 
 dioxus-lib = { workspace = true }
 generational-box = { workspace = true }
+dioxus-runtime-config = { workspace = true }
 
 # Dioxus + SSR
 dioxus-ssr = { workspace = true, optional = true }
@@ -62,7 +63,6 @@ tower = { workspace = true, features = ["util"], optional = true }
 tower-layer = { version = "0.3.2", optional = true }
 parking_lot = { version = "0.12.1", features = ["send_guard"], optional = true }
 web-sys = { version = "0.3.61", optional = true, features = ["Window", "Document", "Element", "HtmlDocument", "Storage", "console"] }
-clap = { workspace = true, optional = true, features = ["derive"] }
 aws-lc-rs = { version = "1.8.1", optional = true }
 dioxus-devtools = { workspace = true, optional = true }
 
@@ -105,7 +105,6 @@ server = [
     "dep:async-trait",
     "dep:parking_lot",
     "dioxus-interpreter-js",
-    "dep:clap",
 ]
 aws-lc-rs = ["dep:aws-lc-rs"]
 
