--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -17,6 +17,7 @@ wasm-bindgen-cli-support = "0.2"
 wasm-bindgen-shared = "0.2"
 
 # features
+uuid = { version = "1.3.0", features = ["v4"] }
 log = "0.4.14"
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
