--- a/packages/devtools/Cargo.toml
+++ b/packages/devtools/Cargo.toml
@@ -17,11 +17,13 @@ dioxus-core = { workspace = true, features = ["serialize"] }
 dioxus-devtools-types = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
-tungstenite = { version = "0.23.0" }
 
 # hot reloading serve
 tracing = { workspace = true }
 warnings.workspace = true
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+tungstenite = { version = "0.23.0" }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["full"] }
