--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -19,3 +19,5 @@ jobs:
         run: nix --accept-flake-config profile install "github:juspay/omnix"
       - name: Build all flake outputs
         run: om ci
+      - name: Ensure devShell has all build deps
+        run: nix develop -c cargo build -p dioxus-cli
