--- a/packages/html/Cargo.toml
+++ b/packages/html/Cargo.toml
@@ -52,7 +52,8 @@ features = [
     "CompositionEvent",
     "CustomEvent",
     "ResizeObserverEntry",
-    "ResizeObserverSize"
+    "ResizeObserverSize",
+    "IntersectionObserverEntry"
 ]
 
 [build-dependencies]
