Add a visible example
This example is based on https://codepen.io/ryanfinni/pen/VwZeGxN

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -355,6 +355,10 @@ required-features = ["desktop"]
 doc-scrape-examples = true
 
 [[example]]
+name = "visible"
+doc-scrape-examples = true
+
+[[example]]
 name = "window_event"
 required-features = ["desktop"]
 doc-scrape-examples = true
