--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -18,7 +18,6 @@ wasm-bindgen-shared = "0.2"
 
 # features
 uuid = { version = "1.3.0", features = ["v4"] }
-log = "0.4.14"
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 toml = { workspace = true }
@@ -106,7 +105,8 @@ ansi-to-tui = "=5.0.0-rc.1"
 ansi-to-html = "0.2.1"
 manganis-core = { workspace = true }
 
-
+# link intercept
+tempfile = "3.3"
 
 
 # # just use the manganis crate directly since it has all the types we need
@@ -174,8 +174,7 @@ wasm-opt = ["dep:wasm-opt"]
 path = "src/main.rs"
 name = "dx"
 
-[dev-dependencies]
-tempfile = "3.3"
+
 
 [package.metadata.binstall]
 pkg-url = "{ repo }/releases/download/v{ version }/dx-{ target }-v{ version }{ archive-suffix }"
