--- a/packages/manganis-core/Cargo.toml
+++ b/packages/manganis-core/Cargo.toml
@@ -4,3 +4,5 @@ edition = "2021"
 version.workspace = true
 
 [dependencies]
+serde_json = "1.0"
+serde = { workspace = true, features = ["derive"] }
