--- a/packages/manganis-macro/Cargo.toml
+++ b/packages/manganis-macro/Cargo.toml
@@ -15,9 +15,10 @@ proc-macro = true
 [dependencies]
 proc-macro2 = { version = "1.0" }
 quote = "1.0"
-serde_json = "1.0"
 syn = { version = "2.0", features = ["full", "extra-traits"] }
+serde_json = "1.0"
 serde = { workspace = true, features = ["derive"] }
+manganis-core = { workspace = true }
 
 [features]
 default = []
