add http serve subcommand

--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -92,6 +92,7 @@ dioxus-core = { workspace = true, features = ["serialize"] }
 dioxus-core-types = { workspace = true }
 dioxus-devtools-types = { workspace = true }
 dioxus-runtime-config = { workspace = true }
+dioxus-fullstack = { workspace = true }
 ignore = "0.4.22"
 env_logger = { workspace = true }
 
