--- a/example-projects/fullstack-mobile/Cargo.toml
+++ b/example-projects/fullstack-mobile/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 dioxus = { workspace = true, features = ["fullstack"] }
 serde = { workspace = true, features = ["derive"] }
 reqwest = { workspace = true, features = ["json"] }
+tracing = { workspace = true }
 
 [features]
 desktop = ["dioxus/desktop"]
